fix: responsive layout issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -94,6 +94,7 @@
 .service p{
     font-family: poppins-regular;
     color: #4A4A4A;
+    padding-right: 228px;
     
     
 }
@@ -115,15 +116,17 @@
     font-family: poppins-medium;
     font-size: 28px;
     
-    padding-left: 101px;
+    /* padding-left: 101px; */
     padding-bottom: 22px;
-    padding-right: 85px;
+    /* padding-right: 85px; */
 }
 
 .service-arrow{
     position: absolute;
-    bottom: 111px;
-    left: 164px;
+    bottom: 31%;
+    /* bottom: 111px; */
+    /* left: 164px; */
+    left: 40%;
     z-index: 7;
 }
 .box-shade{
@@ -232,6 +235,7 @@
     border-bottom-left-radius: 7px;
     border-bottom-right-radius: 7px;
     width: auto;
+    padding: 10px;
     
 }
 .date-overlay h3{
@@ -240,11 +244,12 @@
     font-size: 14px;
     letter-spacing: 2px;
     line-height: auto;
+    margin: 0;
 }
 .date-overlay hr{
     color: #1A2B56;
     line-height: auto;
-    /* margin: 0; */
+    margin: 5px;
 
 }
 .date-overlay h2{
@@ -253,6 +258,7 @@
     font-size: 32px;
     letter-spacing: 2px;
     line-height: 34px;
+    margin: 0;
 }
 .card {
     position: relative;
@@ -297,7 +303,7 @@
     position:absolute;
     padding-right: 32px;
     left: 497px;
-    top: 180px;
+    top: 280px;
 
 
 }
@@ -321,6 +327,7 @@ footer{
 }
 .nav-footer ul{
     list-style-type: none;
+    gap: 3rem;
     
 }
 .nav-footer a{
@@ -364,7 +371,12 @@ footer p{
         padding-top: 0px;
     }
     
-    
+    .service-grid h4{
+        font-size: 24px;
+    }
+    .box-shade{
+        height: 30%;
+    }
 
     
 }
@@ -388,10 +400,47 @@ footer p{
     }
 
     .about-text{
-        padding-left: 79px;
+        padding-left: 30px;
         padding-top: 0px;
     }
 
+
+    
+    .text-column  {
+        order: 1;
+     
+    }
+    
+    
+
+  .service-wrapper {
+    order: 2;
+    width: 80%;
+    
+    margin-top: 2rem;
+    justify-content: center; /* Keeps images centered */
+  }
+
+  .service-grid {
+    width: auto; /* Keeps them side-by-side */
+
+}
+
+    .service p{
+        padding-right: 0;
+    }
+    .date-overlay{
+        width: 30%;
+        padding: 0;
+    }
+    .date-overlay h2{
+        font-size: 24px;
+    }
+    .date-overlay h3{
+        font-size: 12px;
+    }
+    
+    
 }
 
 @media only screen and (max-width: 768px) and (min-width: 576px) {
@@ -412,6 +461,29 @@ footer p{
     .contact-img img{
         width: 95%;
     }
+     .service p{
+        padding-right: 0;
+    }
+    .service h3{
+        text-align: center;
+    }
+     .about-text{
+        padding-left: 69px;
+    }
+    .core-values hr{
+        width: 39px;
+    }
+    .core-values{
+        font-size: 1.75rem;
+    }
+    .about-text h3 {
+        text-align: center;
+    }
+    .about-button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 
@@ -419,19 +491,51 @@ footer p{
      .contact-overlay{
     background-color: #F8F9FA;
     font-family: poppins-light;
-    padding-left: 44px;
-    width: 450px;
-    padding-top: 55px;
-    padding-bottom: 60px;
+    padding-left: 30px;
+    width: 419px;
+    padding-top: 33px;
+    padding-bottom: 33px;
     position:absolute;
-    padding-right: 32px;
-    left: 77px;
-    top: 343px;
+    padding-right: 14px;
+    left: 38px;
+    top: 290px;
 
 
     }
     .contact-img img{
-        width: 95%;
+        width: 80%;
+    }
+     .service p{
+        padding-right: 0;
+    }
+    .service h3{
+        text-align: center;
+    }
+    .about-text{
+        padding-left: 29px  ;
+    }
+    .core-values hr{
+        width: 18px;
+    }
+    .core-values{
+        font-size: 1rem;
+    }
+    .card{
+        width: 50%;
+    }
+    .service-grid h4{
+        font-size: 27px;
+    }
+    .about-text h3 {
+        text-align: center;
+    }
+    .about-button{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .nav-footer ul{
+        gap: 1rem;
     }
 
 }
